--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ variables:
 
 before_script:
   # Download and install Android SDK
+  - sudo apt update
+  - sudo apt install wget
   - wget "https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip" -O android-tools.zip
   - unzip android-tools.zip -d /sdk/cmdline-tools
   - mv /sdk/cmdline-tools/cmdline-tools /sdk/cmdline-tools/latest
