Fixed wget: command not found error

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ variables:
 
 before_script:
   # Download and install Android SDK
-  - sudo apt update
-  - sudo apt install wget
+  - apt-get update
+  - apt-get install -y wget
   - wget "https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip" -O android-tools.zip
   - unzip android-tools.zip -d /sdk/cmdline-tools
   - mv /sdk/cmdline-tools/cmdline-tools /sdk/cmdline-tools/latest
