--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,9 @@ before_script:
   - export PATH=$PATH:/sdk/cmdline-tools/latest/bin
 
   # Accept licenses and install SDK components
-  - yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-  - sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-$ANDROID_COMPILE_SDK" "build-tools;$ANDROID_BUILD_TOOLS" "platform-tools"
+  - sdkmanager --licenses || true
+  - sdkmanager --update || true
+  - sdkmanager --install "platforms;android-$ANDROID_COMPILE_SDK" "build-tools;$ANDROID_BUILD_TOOLS" "platform-tools" || true
 
 stages:
   - build
