Fixed wget: command not found error

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: openjdk:17-jdk-slim
 
 variables:
   ANDROID_COMPILE_SDK: "34"
-  ANDROID_BUILD_TOOLS: "33.0.2"
+  ANDROID_BUILD_TOOLS: "34.0.0"
   ANDROID_SDK_ROOT: "/sdk"
   GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"
 
@@ -25,7 +25,7 @@ before_script:
   - export PATH=$PATH:/sdk/cmdline-tools/latest/bin
 
   # Accept licenses and install SDK components
-  - sdkmanager --licenses || true
+  - yes | sdkmanager --licenses || true
   - sdkmanager --update || true
   - sdkmanager --install "platforms;android-$ANDROID_COMPILE_SDK" "build-tools;$ANDROID_BUILD_TOOLS" "platform-tools" || true
 
